# claw-mesh

./: .env.example  .gitignore  CLAUDE.md  README.md  SKILL.md  package.json  test-proxy-integration.js  tsconfig.json  vitest.config.ts
.mem/ontology/: graph.jsonl
api/: governance-api.ts  llm-proxy-lite.ts  llm-proxy.ts  memov-mcp-proxy.ts  stream-chat.ts
config/: 99-wireguard-docker.conf  docker-daemon.json  redis.ts  wg0.conf.template
constants/: ZH_SYSTEM_PROMPT.ts
deploy/: Dockerfile.agent  Dockerfile.agent-task
deploy/cpu-nodes/: deploy-all.sh  setup-bitnet.sh  setup-cpu-node.sh
deploy/dragonfly/: migrate.sh
deploy/litellm/: config.yaml
deploy/monitoring/: alerting-rules.yml  (+2 more)
docs/: DEPLOY_GUIDE.md  PROD_FIXES_v0.3.5.md  WIREGUARD_DEPLOYMENT.md  integration-design.md
experiments/iroh-mesh/: Cargo.toml  README.md
experiments/iroh-mesh/src/: discovery.rs  lib.rs  main.rs  transfer.rs
fsc/: device-heartbeat.ts  fsc-gateway-daemon.ts  fsc-worker-daemon.ts  gateway-github-integration.ts  memov-event-snap.ts  memov-sync-daemon.ts  worker-capability-evolver.ts
governance/: audit-log.ts  cost-controller.ts  evolution.ts  index.ts  policy-engine.ts  quality-judge.ts  trust-factor.ts  tsconfig.json  types.ts
memory/: causal.js  ontology-init.js  ontology.js  pointer-redis.js
monitoring/: promtail.yml
reference/: troubleshooting.md
scripts/: agent-entrypoint.sh  bootstrap-mesh.sh  demo-pointer.js  gen-keys.sh  migrate-pointer-to-redis.js  ralph.sh  redis-pel-cleanup.sh  star-office-bridge.ts
sentinel/: README.md
tasks/: prd.json
(+35 files in other folders)
