[package]
name = "iroh-mesh-proto"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "iroh-mesh"
path = "src/main.rs"

[lib]
name = "iroh_mesh_proto"
path = "src/lib.rs"

[dependencies]
iroh = "0.35"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
rand = "0.8"
dirs = "5"

# New in 0.2
blake3 = "1"
indicatif = "0.17"
bytes = "1"
